tests/parse/fail/illegal-66.dcf
void main(int x, y) {
}